--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create resume from website",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "node index.js"
   },
   "keywords": [
     "resume",
